# heroes2

./: README  Setup.hs  heroes2.cabal
src/: Main.hs
src/Heroes2/: Hero.hs  Kingdom.hs  Race.hs
